@@ -176,8 +176,9 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (!Objects.equals(writeConf.batchSize(), batchSize))
                 return withWriteConf(
                     new WriteConf(batchSize, writeConf.batchGroupingBufferSize(), writeConf.batchGroupingKey(),
-                        writeConf.consistencyLevel(), writeConf.ignoreNulls(), writeConf.parallelismLevel(),
-                        writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
+                        writeConf.consistencyLevel(), writeConf.ifNotExists(), writeConf.ignoreNulls(),
+                        writeConf.parallelismLevel(), writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(),
+                        writeConf.taskMetricsEnabled()));
             else
                 return this;
         }
@@ -194,8 +195,9 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (writeConf.batchGroupingBufferSize() != batchGroupingBufferSize)
                 return withWriteConf(
                     new WriteConf(writeConf.batchSize(), batchGroupingBufferSize, writeConf.batchGroupingKey(),
-                        writeConf.consistencyLevel(), writeConf.ignoreNulls(), writeConf.parallelismLevel(),
-                        writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
+                        writeConf.consistencyLevel(), writeConf.ifNotExists(), writeConf.ignoreNulls(),
+                        writeConf.parallelismLevel(), writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(),
+                        writeConf.taskMetricsEnabled()));
             else
                 return this;
         }
@@ -212,8 +214,9 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (!Objects.equals(writeConf.batchGroupingKey(), batchGroupingKey))
                 return withWriteConf(
                     new WriteConf(writeConf.batchSize(), writeConf.batchGroupingBufferSize(), batchGroupingKey,
-                        writeConf.consistencyLevel(), writeConf.ignoreNulls(), writeConf.parallelismLevel(),
-                        writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
+                        writeConf.consistencyLevel(), writeConf.ifNotExists(), writeConf.ignoreNulls(),
+                        writeConf.parallelismLevel(), writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(),
+                        writeConf.taskMetricsEnabled()));
             else
                 return this;
         }
@@ -230,8 +233,8 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (writeConf.consistencyLevel() != consistencyLevel)
                 return withWriteConf(
                     new WriteConf(writeConf.batchSize(), writeConf.batchGroupingBufferSize(), writeConf.batchGroupingKey(),
-                        consistencyLevel, writeConf.ignoreNulls(), writeConf.parallelismLevel(), writeConf.throughputMiBPS(),
-                        writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
+                        consistencyLevel, writeConf.ifNotExists(), writeConf.ignoreNulls(), writeConf.parallelismLevel(),
+                        writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
             else
                 return this;
         }
@@ -248,8 +251,8 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (writeConf.parallelismLevel() != parallelismLevel)
                 return withWriteConf(
                     new WriteConf(writeConf.batchSize(), writeConf.batchGroupingBufferSize(), writeConf.batchGroupingKey(),
-                        writeConf.consistencyLevel(), writeConf.ignoreNulls(), parallelismLevel, writeConf.throughputMiBPS(),
-                        writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
+                        writeConf.consistencyLevel(), writeConf.ifNotExists(), writeConf.ignoreNulls(), parallelismLevel,
+                        writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
             else
                 return this;
         }
@@ -266,8 +269,9 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (writeConf.throughputMiBPS() != throughputMBPS)
                 return withWriteConf(
                     new WriteConf(writeConf.batchSize(), writeConf.batchGroupingBufferSize(), writeConf.batchGroupingKey(),
-                        writeConf.consistencyLevel(), writeConf.ignoreNulls(), writeConf.parallelismLevel(), throughputMBPS,
-                        writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
+                        writeConf.consistencyLevel(), writeConf.ifNotExists(), writeConf.ignoreNulls(),
+                        writeConf.parallelismLevel(), throughputMBPS, writeConf.ttl(), writeConf.timestamp(),
+                        writeConf.taskMetricsEnabled()));
             else
               return this;
         }
@@ -284,8 +288,26 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (writeConf.taskMetricsEnabled() != taskMetricsEnabled)
                 return withWriteConf(
                         new WriteConf(writeConf.batchSize(), writeConf.batchGroupingBufferSize(), writeConf.batchGroupingKey(),
-                                writeConf.consistencyLevel(), writeConf.ignoreNulls(), writeConf.parallelismLevel(), writeConf.throughputMiBPS(),
-                                writeConf.ttl(), writeConf.timestamp(), taskMetricsEnabled));
+                                writeConf.consistencyLevel(), writeConf.ifNotExists(), writeConf.ignoreNulls(),
+                                writeConf.parallelismLevel(), writeConf.throughputMiBPS(), writeConf.ttl(),
+                                writeConf.timestamp(), taskMetricsEnabled));
+            else
+                return this;
+        }
+
+        /**
+         * Return a copy of this builder with the new write configuration which has ifNotExists set to enabled or disabled as specified.
+         *
+         * <p>If the same instance is passed as the one which is currently set, no copy of this builder is created.</p>
+         *
+         * @return this instance or copy to allow method invocation chaining
+         */
+        public WriterBuilder withIfNotExists(boolean ifNotExists) {
+            if (writeConf.ifNotExists() != ifNotExists)
+                return withWriteConf(
+                        new WriteConf(writeConf.batchSize(), writeConf.batchGroupingBufferSize(), writeConf.batchGroupingKey(),
+                                writeConf.consistencyLevel(), ifNotExists, writeConf.ignoreNulls(), writeConf.parallelismLevel(),
+                                writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
             else
                 return this;
         }
@@ -301,8 +323,8 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
             if (writeConf.ignoreNulls() != ignoreNulls)
                 return withWriteConf(
                         new WriteConf(writeConf.batchSize(), writeConf.batchGroupingBufferSize(), writeConf.batchGroupingKey(),
-                                writeConf.consistencyLevel(), ignoreNulls, writeConf.parallelismLevel(), writeConf.throughputMiBPS(),
-                                writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
+                                writeConf.consistencyLevel(), writeConf.ifNotExists(), ignoreNulls, writeConf.parallelismLevel(),
+                                writeConf.throughputMiBPS(), writeConf.ttl(), writeConf.timestamp(), writeConf.taskMetricsEnabled()));
             else
                 return this;
         }
@@ -315,6 +337,7 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
                     writeConf.batchGroupingBufferSize(),
                     writeConf.batchGroupingKey(),
                     writeConf.consistencyLevel(),
+                    writeConf.ifNotExists(),
                     writeConf.ignoreNulls(),
                     writeConf.parallelismLevel(),
                     writeConf.throughputMiBPS(),
@@ -395,6 +418,7 @@ public abstract class RDDAndDStreamCommonJavaFunctions<T> {
                     writeConf.batchGroupingBufferSize(),
                     writeConf.batchGroupingKey(),
                     writeConf.consistencyLevel(),
+                    writeConf.ifNotExists(),
                     writeConf.ignoreNulls(),
                     writeConf.parallelismLevel(),
                     writeConf.throughputMiBPS(),
