@@ -1,3 +1,4 @@
+ * Added support for IF NOT EXISTS (SPARKC-362)
  * Nested Optional Case Class can be save as UDT (SPARKC-346)
  * Merged Java API into main module (SPARKC-335)
  * Upgraded to Spark 1.6.1 (SPARKC-344)
